--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       context: requirements/mariadb
       dockerfile: Dockerfile
     env_file: .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - mariadb:/var/lib/mysql
     restart: unless-stopped
