Replace hardcoded variables in setup.sh with variables from the .env file.

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,20 @@
-# ========== MariaDB ==========
+# MariaDB
 MYSQL_DATABASE=inception_db
 MYSQL_USER=wlouaked
 MYSQL_PASSWORD=123lune456
 MYSQL_ROOT_PASSWORD=123soleil456
 
-# ========== WordPress ==========
+# WordPress
 WP_PATH=/var/www/wordpress
-DB_HOST=mariadb:3306
+DB_HOST=mariadb
+
 SITE_URL=http://wlouaked.42.fr
 SITE_TITLE=wlouaked site
-ADMIN_USER=maya
-ADMIN_PASSWORD=mya222
-ADMIN_EMAIL=wlouaked@student.42.fr
 
-# ========== System ==========
-USER=wayl
+ADMIN_USER=maya
+ADMIN_PASSWORD=222mya
+ADMIN_EMAIL=maya@student.42.fr
+
+WAYL_USER=wayl
+WAYL_PASSWORD=mya222
+
